--- a/.github/workflows/cicd_develop.yml
+++ b/.github/workflows/cicd_develop.yml
@@ -40,8 +40,8 @@ jobs:
     - name: Move file and create PR
       working-directory: dest
       run: |
-        git config --global user.name "pigmeister"
-        git config --global user.email "nipuntopno77@gmail.com"
+        git config user.name 'github-actions[bot]'
+        git config user.email 'github-actions[bot]@users.noreply.github.com'
         git add .
         git commit -m 'Added new files'
         git push origin test-head
