--- a/.github/workflows/cicd_develop.yml
+++ b/.github/workflows/cicd_develop.yml
@@ -43,8 +43,16 @@ jobs:
         app_id: ${{ secrets.GH_APP_ID }}
         private_key: ${{ secrets.GH_APP_SECRET }}
     - name: Create PR
-      working-directory: src
-      env:
-        TOKEN: ${{ steps.generate_token.outputs.token }}
       run: |
-        python ./scripts/git_test/git_test.py  
+        curl -L \
+        -X POST \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}"\
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        https://api.github.com/repos/pigmeister/node-weather-website/pulls \
+        -d '{
+          "title": "Test curl PR",
+          "body": "Test PR using curl",
+          "head": "test-head",
+          "base": "test-base"
+        }'
