--- a/.github/workflows/cicd_develop.yml
+++ b/.github/workflows/cicd_develop.yml
@@ -44,13 +44,11 @@ jobs:
         private_key: ${{ secrets.GH_APP_SECRET }}
     - name: Create PR
       run: |
-        curl -L \
-        -X POST \
-        -H "Accept: application/vnd.github+json" \
-        -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}"\
-        -H "X-GitHub-Api-Version: 2022-11-28" \
-        https://api.github.com/repos/pigmeister/node-weather-website/pulls \
-        -d '{
+        curl --request POST \
+        --header 'authorization: Bearer ${{ steps.generate_token.outputs.token }}' \
+        --header 'content-type: application/json' \
+        --url 'https://api.github.com/repos/pigmeister/node-weather-website/pulls' \
+        --data '{
           "title": "Test curl PR",
           "body": "Test PR using curl",
           "head": "test-head",
