--- a/.github/workflows/cicd_develop.yml
+++ b/.github/workflows/cicd_develop.yml
@@ -40,8 +40,8 @@ jobs:
       - name: Push files
         working-directory: dest
         run: |
-          git config user.name 'github-actions[bot]'
-          git config user.email 'github-actions[bot]@users.noreply.github.com'
+          git config user.name 'pigmeister'
+          git config user.email 'nipuntopno77@gmail.com'
           git branch test-head
           git checkout test-head
           git add .
