--- a/.github/workflows/cicd_develop.yml
+++ b/.github/workflows/cicd_develop.yml
@@ -41,7 +41,7 @@ jobs:
         working-directory: dest
         run: |
           git config user.name 'pigmeister'
-          git config user.email 'nipuntopno77@gmail.com'
+          git config user.email 'github-actions[bot]@users.noreply.github.com'
           git branch test-head
           git checkout test-head
           git add .
