--- a/.github/workflows/cicd_develop.yml
+++ b/.github/workflows/cicd_develop.yml
@@ -4,14 +4,6 @@ run-name: CI/CD Develop
 on:
   push:
     branches: develop
-  workflow_dispatch:
-    inputs:
-      variable:
-        type: choice
-        description: This is a variable
-        options:
-          - value3
-          - value4
 
 jobs:
   generate_pr:
@@ -20,33 +12,19 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          path: src
           fetch-depth: '0'
-      - uses: actions/checkout@v3
-        with:
-          repository: pigmeister/node-weather-website
-          ref: test-base
-          ssh-key: ${{ secrets.SSH_DEPLOY_KEY }}
-          path: dest
       - uses: actions/setup-python@v4
         with:
           python-version: '3.7'
           cache: 'pip'
       - name: Generate files
-        working-directory: src
         run: |
+          install -m 600 -D /dev/null ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          install -m 600 -D /dev/null ~/.ssh/id_rsa.pub
+          echo "${{ secrets.SSH_PUBLIC_KEY }}" > ~/.ssh/id_rsa.pub
           pip install -r ./scripts/git_test/requirements.txt
           python ./scripts/git_test/create_files.py
-      - name: Push files
-        working-directory: dest
-        run: |
-          git config user.name 'github-actions[bot]'
-          git config user.email 'github-actions[bot]@users.noreply.github.com'
-          git branch test-head
-          git checkout test-head
-          git add .
-          git commit -m 'Added files'
-          git push origin test-head
       - name: Generate token
         id: generate_token
         uses: tibdex/github-app-token@v1
@@ -65,9 +43,3 @@ jobs:
             "head": "test-head",
             "base": "test-base"
           }'
-
-  manual_workflow:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'workflow_dispatch'
-    steps:
-      - run: echo '${{ github.event.inputs.variable }}'
