--- a/.github/workflows/pr_comment.yml
+++ b/.github/workflows/pr_comment.yml
@@ -5,6 +5,12 @@ on:
   issue_comment:
     types: [created]
 
+permissions:
+    pull-requests: write
+    deployments: write
+    contents: write
+    checks: read
+
 jobs:
   comment_on_pr:
     if: ${{ github.event.issue.pull_request }}
